--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -22,8 +23,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "puppeteer": "^23.8.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "puppeteer": "^23.8.0"
+    "typescript": "^5"
   }
 }
